Fix mobile layout bugs.

--- a/src/main/resources/static/Components/Heading/H2.css
+++ b/src/main/resources/static/Components/Heading/H2.css
@@ -10,6 +10,7 @@ h2 {
 
 @media (width < 1200px) {
 	h2 {
+		margin-bottom: 0px;
 		font-size: var(--spacing-large);
 	}
 }
